third_party/blink/renderer/core/dom/events/window_event_context.cc
@@ -46,6 +46,7 @@ WindowEventContext::WindowEventContext(
     return;
   window_ = ToDocument(top_node_event_context.GetNode())->domWindow();
   target_ = top_node_event_context.Target();
+  related_target_ = top_node_event_context.RelatedTarget();
 }
 
 bool WindowEventContext::HandleLocalEvents(Event& event) {
@@ -54,6 +55,8 @@ bool WindowEventContext::HandleLocalEvents(Event& event) {
 
   event.SetTarget(Target());
   event.SetCurrentTarget(Window());
+  if (RelatedTarget())
+    event.SetRelatedTargetIfExists(RelatedTarget());
   window_->FireEventListeners(event);
   return true;
 }
@@ -61,6 +64,7 @@ bool WindowEventContext::HandleLocalEvents(Event& event) {
 void WindowEventContext::Trace(blink::Visitor* visitor) {
   visitor->Trace(window_);
   visitor->Trace(target_);
+  visitor->Trace(related_target_);
 }
 
 }  // namespace blink
