third_party/blink/renderer/core/dom/events/window_event_context.h
@@ -44,6 +44,7 @@ class WindowEventContext : public GarbageCollected<WindowEventContext> {
 
   LocalDOMWindow* Window() const;
   EventTarget* Target() const;
+  EventTarget* RelatedTarget() const;
   bool HandleLocalEvents(Event&);
 
   void Trace(blink::Visitor*);
@@ -51,6 +52,7 @@ class WindowEventContext : public GarbageCollected<WindowEventContext> {
  private:
   Member<LocalDOMWindow> window_;
   Member<EventTarget> target_;
+  Member<EventTarget> related_target_;
   DISALLOW_COPY_AND_ASSIGN(WindowEventContext);
 };
 
@@ -60,6 +62,10 @@ inline LocalDOMWindow* WindowEventContext::Window() const {
 
 inline EventTarget* WindowEventContext::Target() const {
   return target_.Get();
+}
+
+inline EventTarget* WindowEventContext::RelatedTarget() const {
+  return related_target_.Get();
 }
 
 }  // namespace blink
